--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install the generator
-        run: npm i -g yo generator-starknet
+        run: npm i -g yo && npm i --production && npm link
       - name: Install the expect utility
         run: sudo apt-get install -y expect
       - name: Run the generator
